Working on some deployment issues

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://captainalan.github.io/github-website",
+  "homepage": "https://captainalan.github.io/me",
   "name": "github-website",
   "version": "0.1.0",
   "private": true,
