--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "^2.1.8"
+    "react": "^16.13.*",
+    "react-dom": "^16.13.*",
+    "react-scripts": "^3.4.*"
   },
   "scripts": {
     "start": "react-scripts start",
